# programming_tech_lab_widgets

./: CMakeLists.txt  README.md  main.cpp
counter_module/: CMakeLists.txt  counter.hpp
counter_module/src/: counter.cpp
figure_module/: Area.hpp  CMakeLists.txt  Figure.hpp  Window.hpp
figure_module/src/: Area.cpp  Figure.cpp  Window.cpp
launcher_module/: CMakeLists.txt  launcher.hpp
launcher_module/src/: launcher.cpp
square_module/: CMakeLists.txt  square_module.hpp
square_module/src/: square_module.cpp
